[tool.poetry]
name = "langgraph-test"
version = "0.1.0"
description = ""
authors = ["Djordje Lukic <djordje.lukic@docker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.15"
langgraph = "^0.2.43"
langchain-openai = "^0.2.5"
termcolor = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
